# SPC-analysis

./: .gitignore  README.md  app.py  main.py  pyproject.toml
docs/: methodology.md  user_guide.md
pages/: 00_Home.py  01_data_import.py  02_phase_i.py  03_final_charts.py  04_capability.py  05_audit_trail.py  06_Documentation.py
src/spc/: __init__.py
src/spc/charts/: __init__.py  imr.py
src/spc/core/: __init__.py  capability.py  limits.py  normality.py  phase_i.py  rules.py
tests/: test_spc_core.py
